fixing accessbility issue warning for edit not visible

--- a/src/themes/wetoverlay/styles/_wet_other_styles.scss
+++ b/src/themes/wetoverlay/styles/_wet_other_styles.scss
@@ -53,6 +53,12 @@ a.nav-link:focus{
   border-color: #E3F2FD;
 }
 
+.btn-dark[_ngcontent-dspace-angular-c361] {
+  color: black;
+  background-color: #f8f9fa;
+  border-color: black;
+}
+
 .btn-outline-primary{
   color: #207698;
   border-color: #212529;
